syntax = "proto3";

package proto;

option go_package = "mailService/proto";

message EmailEntry{
    string id = 1;
    string email = 2;
    int64 confirmed_at = 3;
    bool optout = 4;
}

message InsertEmailRequest{string email = 1;}
message GetEmailRequest{string email = 1;}
message DeleteEmailRequest{string email = 1;}
message UpdateEmailRequest{EmailEntry emailEntry = 1;}
message GetEmailBatchRequest{int64 count = 1; int64 page = 2;}


message GetEmailResponse{ optional EmailEntry emailEntry = 1;}
message GetEmailBatchResponse{ repeated EmailEntry emailEntry = 1;}

service mailing_service{

    rpc InsertEmail(InsertEmailRequest) returns (GetEmailResponse){}
    rpc GetEmail(GetEmailRequest) returns (GetEmailResponse){}
    rpc DeleteEmail(DeleteEmailRequest) returns (GetEmailResponse){}
    rpc UpdateEmail(UpdateEmailRequest) returns (GetEmailResponse){}
    rpc GetEmailBatch(GetEmailBatchRequest) returns (GetEmailBatchResponse){}
}